--- a/server/views/components/header.scss
+++ b/server/views/components/header.scss
@@ -1,14 +1,37 @@
 .Header {
-  background-color: greenyellow;
-  height: 400px;
-  width: 100vw;
+  position: relative;
+  
+  grid-column-start: 1;
+  grid-column-end: 2;
+  margin-top: 30vh;
+  margin-left: 10vw;
+  width: 30vw;
+  height: 30vw;
+  
+  background-color: $atoll;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white;
 
   &__img {
     padding-top: 30px;
+    
+    img {
+      width: 15vw;
+    }
   }
+
+  
+
+  @include screenBP(tab-land) {
+    width: 100vw;
+    height: 40vw;
+    top: 120px;
+    margin-top: 0;
+    margin-left: 0;
+    justify-content: flex-start;
+  }
+
 }
