--- a/server/views/components/tweet.scss
+++ b/server/views/components/tweet.scss
@@ -1,10 +1,9 @@
 .Tweet {
-  background-color: green;
-  color: white;
-
+  background-color: $sands-light;
+  color: $ferra;
   width: 97%;
   margin: auto;
-  border: 5px solid black;
+  border: 1em solid $ferra;
   margin-top: 30px;
 
   &__header {
