corrected character count for submission and containing text inside of container

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -117,7 +117,8 @@ body {
   .Tweet__body {
     width: 97%;
     margin: auto;
-    border-bottom: 5px solid black; }
+    border-bottom: 5px solid black;
+    word-wrap: break-word; }
   .Tweet__footer {
     display: flex;
     justify-content: space-between;
